src/components/Pagination/Pagination.scss
// @import url('../../fonts/Mont-Regular/style.css');

.pagination {
  display: flex;
  justify-content: center;

  &__item {
    list-style: none;
    margin-right: 8px;

    &:last-child {
      margin-right: 0;
      margin-left: 8px;
    }

    &:first-child {
      margin-right: 16px;
    }
  }

  &__link {
    display: block;
    width: 32px;
    height: 32px;

    font-family: 'Mont', Helvetica, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    line-height: 32px;

    color: #0f0f11;
    text-decoration: none;
    border: 1px solid #e2e6e9;
    border-radius: 50%;
    cursor: pointer;

    &-arrow {
      border: 1px solid #b4bdc4;
    }

    &-active {
      color: #ffffff;
      border: 1px solid #0f0f11;
      background-color: #0f0f11;
    }
  }
}

